tests/NormalTests/paczka1/fuzzy1/14944553.err
Error in line 3: ScM9JNEPo A345 83,6
Error in line 22: mwLW A353 218,4
Error in line 39: ScM9JNEPo A3?5 88,2
